test_1_err19890554.err
Loaded dependency [python3/3.11.3]: gcc/12.2.0-binutils-2.39
Loaded dependency [python3/3.11.3]: sqlite3/3.40.1
Loaded module: python3/3.11.3

Loading python3/3.11.3
  Loading requirement: gcc/12.2.0-binutils-2.39 sqlite3/3.40.1
Loaded module: cuda/12.1
Traceback (most recent call last):
  File "NNTemplate.py", line 1, in <module>
    import torch
  File "/zhome/36/0/204785/Tetris-DQN-NEAT/tetris_temp_env/lib64/python3.6/site-packages/torch/__init__.py", line 29, in <module>
    from .torch_version import __version__ as __version__
  File "/zhome/36/0/204785/Tetris-DQN-NEAT/tetris_temp_env/lib64/python3.6/site-packages/torch/torch_version.py", line 3, in <module>
    from pkg_resources import packaging  # type: ignore[attr-defined]
  File "/appl/python/3.11.3/lib/python3.11/site-packages/pkg_resources/__init__.py", line 88, in <module>
    from pkg_resources.extern import platformdirs
  File "<frozen importlib._bootstrap>", line 971, in _find_and_load
  File "<frozen importlib._bootstrap>", line 955, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 658, in _load_unlocked
  File "<frozen importlib._bootstrap>", line 571, in module_from_spec
  File "/appl/python/3.11.3/lib/python3.11/site-packages/pkg_resources/extern/__init__.py", line 52, in create_module
    return self.load_module(spec.name)
  File "/appl/python/3.11.3/lib/python3.11/site-packages/pkg_resources/extern/__init__.py", line 37, in load_module
    __import__(extant)
  File "/appl/python/3.11.3/lib/python3.11/site-packages/pkg_resources/_vendor/platformdirs/__init__.py", line 5
    from __future__ import annotations
    ^
SyntaxError: future feature annotations is not defined
